--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-hot-toast": "^2.6.0",
     "react-i18next": "^13.5.0",
     "react-router-dom": "^7.9.4",
+    "socket.io-client": "^4.8.3",
     "tailwindcss": "^4.1.14",
     "xlsx": "^0.18.5"
   },
